Add warning message

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <title>jQuery.textcomplete</title>
 
         <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
@@ -11,6 +12,14 @@
     <body>
         <div class="container">
             <div class="page-header">
+                <div class="alert alert-danger">
+                    <p>
+                        <i class="fa fa-exclamation-triangle"></i>
+                        <strong>jquery-textcomplete is no longer maintained.</strong>
+                        Please update to <a href="https://yuku-t.com/textcomplete">textcomplete</a>.
+                    </p>
+                </div>
+
                 <h1>
                     jQuery.textcomplete
                     <small>Autocomplete for Textarea</small>
