Load all resources via https

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
         })(window,document,'script','dataLayer','GTM-568JL5K');</script>
         <!-- End Google Tag Manager -->
-        <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
         <link href="media/stylesheets/main.css" rel="stylesheet"/>
         <link href="media/stylesheets/shCoreDefault.css" rel="stylesheet"/>
     </head>
@@ -108,7 +108,7 @@ $('#textarea2').textcomplete([
 ]);
 </pre>
 
-            <h3 id="use-with-jquery-overlay">Use with <a href="http://yuku-t.com/jquery-overlay/" target="_blank">jQuery.overlay</a></h3>
+            <h3 id="use-with-jquery-overlay">Use with <a href="https://yuku-t.com/jquery-overlay/" target="_blank">jQuery.overlay</a></h3>
             <div class="textarea-wrapper">
                 <span class="label label-default">#textarea3</span>
                 <textarea class="form-control" id="textarea3" rows="4">Hey @guys,
@@ -347,9 +347,9 @@ $('#textarea7').textcomplete([
             </p>
         </div>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <!-- <script src="media/javascripts/zepto-1.0.js"></script> -->
-        <script src="http://yuku-t.com/jquery-overlay/jquery.overlay.js"></script>
+        <script src="https://yuku-t.com/jquery-overlay/jquery.overlay.js"></script>
         <script src="media/javascripts/jquery.textcomplete.js"></script>
         <script src="media/javascripts/emoji.js"></script>
         <script src="media/javascripts/shCore.js"></script>
